syntax = "proto3";

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-private/pbdesc/protocol/pbdesc";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

import "protocol/extension/svr.database.extension.proto";
import "protocol/pbdesc/com.struct.proto";
import "protocol/pbdesc/svr.struct.proto";

package hello;

message table_login {
  // clang-format off
  option (atframework.database_table) = {
    index: {
      name: "login"
      type: EN_ATFRAMEWORK_DB_INDEX_TYPE_KV
      enable_cas: true
      key_fields: "user_id"
      key_fields: "zone_id"
    }
  };
  // clang-format on
  string open_id = 1;
  uint64 user_id = 2;
  uint32 zone_id = 3;
  uint64 router_server_id = 4;  // 路由系统 - 登入进程id
  uint64 router_version = 5;    // 路由系统 - 登入进程变更版本号

  // 资源冲突检测
  uint64 expect_table_user_db_version = 6;
  google.protobuf.Timestamp expect_table_user_db_timeout = 7;

  // 登入信息
  int64 login_time = 12;          // 上次登入时间
  string login_code = 13;         // 认证码
  int64 login_code_expired = 14;  // 认证码到期时间
  int64 logout_time = 15;         // 登出时间

  // 限制登入信息
  int64 ban_time = 21;  // 封号期限

  // 业务层登入注册信息
  int64 business_register_time = 31;  // 业务层注册时间
  int64 business_login_time = 32;     // 业务层登入时间
  int64 business_logout_time = 33;    // 业务层登出时间

  account_information account = 41;  // 账号信息
  login_record last_login = 42;      // 上次登入的信息
  account_except except = 43;        // 账户异常数据

  // 统计数据
  uint32 stat_login_total_times = 51;    // 总登入次数
  uint32 stat_login_success_times = 52;  // 成功登入次数
  uint32 stat_login_failed_times = 53;   // 失败登入次数
}

message table_user_async_jobs {
  // clang-format off
  option (atframework.database_table) = {
    index: {
      name: "async_jobs"
      type: EN_ATFRAMEWORK_DB_INDEX_TYPE_KL
      enable_cas: true
      key_fields: "job_type"
      key_fields: "user_id"
      key_fields: "zone_id"
    }
  };
  // clang-format on
  int32 job_type = 1;  // 任务类型
  uint64 user_id = 2;
  uint32 zone_id = 3;

  user_async_jobs_blob_data job_data = 11;
}

message table_user {
  // clang-format off
  option (atframework.database_table) = {
    index: {
      name: "user"
      type: EN_ATFRAMEWORK_DB_INDEX_TYPE_KV
      enable_cas: true
      key_fields: "zone_id"
      key_fields: "user_id"
      partly_get: {
        name: "basic_info"
        fields: "open_id"
        fields: "account"
        fields: "player"
        fields: "data_version"
        fields: "options"
      }
    }
  };
  // clang-format on
  string open_id = 1;
  uint64 user_id = 2;
  uint32 zone_id = 3;

  account_information account = 11;  // 账号信息
  player_data player = 12;           // 玩家数据
  uint64 data_version = 13;          // 数据版本号

  player_options options = 21;  // 玩家选项

  // 以下是服务器内部数据
  user_async_jobs_cache_blob_data async_job_blob_data = 101;  // 异步任务缓存
}

message table_distribute_transaction {
  // clang-format off
  option (atframework.database_table) = {
    index: {
      name: "distribute_transaction"
      type: EN_ATFRAMEWORK_DB_INDEX_TYPE_KV
      enable_cas: true
      key_fields: "zone_id"
      key_fields: "transaction_uuid"
    }
  };
  // clang-format on
  uint32 zone_id = 1;
  bytes transaction_uuid = 2;

  google.protobuf.Any blob_data = 11;
}